apps/architecture-portal/versioned_docs/version-1.0.39.0/product/capability-map.mdx
---
title: 产品能力地图
area: product
status: partial
owners: [product, core]
source_paths:
  - products/lmdj/assembly.json
  - products/lmdj/assembly.lock.json
  - docs/prd/decision-log.md
---

import {BuildIdentity} from '@site/src/components/BuildIdentity';

<BuildIdentity />

## 创作能力

Project v3 Truth、命令处理、项目存取、portable Bundle 1.1、确定性 Cook 与 Sequence recording 已实现。Creator Web 提供 Pattern create/select、Record/Stop、overdub、Quantize/Swing/BPM/bars、next-Bar switch、owner-loss recovery，以及既有 Sample Editor、Pad Capture 与 64-Pad Runtime surface。Crop 只修改未提交 capture；多素材浏览、自动 slicing、Undo 与非破坏音频处理仍待后续 Stage。

## 演奏能力

Runtime Snapshot、样本准备、离线渲染、实时引擎、Voice 状态与 Sample preview 具有自动化覆盖。低延迟手感、MIDI/触控输入和设备生命周期需要独立物理验收。

## 智能能力

Capability Contract、Registry、Attempt Store 与本地成功/失败 Proof Provider 已实现。生产模型、云服务、鉴权、计费和数据政策尚未实现。

## Host 与交付能力

当前 source 是 Product Build `1.0.39.0`：Creator Web Host `2.1.1` 与 Formal Web Runtime Host `2.1.1` 已装配；Native Host、CLI 与 MCP 同为 `2.0.0`，Web Hosts 共享 Web Runtime Platform `2.0.1` 和 Application Facade `2.1.0`。Project v3、Sequence journal/receipt/recovery、整数音频 transport、统一输入 admission，以及 manifest 总量与 1 MiB chunk 解耦的有界长素材摄入构成同一能力闭环；Provider 与 Contract 身份不变。
Product Build `1.0.25.0` 曾分配 G2 evidence-durability 级联，同样不新增公开产品能力。
Product Build `1.0.24.0` 曾分配 provider-sdk 修复级联：CLI `1.0.13`、MCP `1.1.10` 与 Native Test Host `1.0.11` 已装配；Creator Web Host `1.3.1` 与 Formal Web Runtime Host `1.2.10` 已装配，并共用 Web Runtime Platform `0.3.1`；本地成功/失败 Proof Provider 也同步升至 `1.0.3`。那次分配修复的是 Attempt reservation 回收与 temp sibling 命名冲突，不新增公开产品能力。

Web Runtime Lab 保持为独立实验工具，不属于 Product Assembly，也不替代正式 Host 或物理设备验收。Product Assembly 锁定确切组件身份，版本发布不由任意 Host 决定。

## 状态解释

“已实现”表示 active source 加当前测试；“部分实现”明确缺口；“已设计/规划中”不作为可用功能宣传。
